[tool.poetry]
name = "slack-gpt"
version = "0.1.0"
description = ""
authors = ["Aaron Ng <aaron@araon.ng>"]

[tool.poetry.dependencies]
python = "^3.9"
slack-bolt = "^1.16.4"
slack-sdk = "^3.20.2"
openai = "^0.27.2"
python-dotenv = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
